# medicament-app

./: .gitignore  README.md  run-frontend.ps1  vercel.json
backend/: .env.example  CMakeLists.txt  run.ps1
backend/include/: app.h
backend/src/: app.c  main.c
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.jsx  Root.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: AdherenceStats.jsx  Auth.jsx  ChatBox.jsx  MedicamentsForm.jsx  MedicamentsList.jsx  PriseHistory.jsx  RendezvousSection.jsx
scripts/: check-prereqs.ps1
supabase/: schema.sql
